# AD3-project

./: .gitignore  sources
opgave/: README.md
src/: CMakeLists.txt  cachegrind.out.1827062  cachegrind.out.1827411  cachegrind.out.1848333  cachegrind.out.3851869  cachegrind.out.3852534  main.c
src/utils/: btree.c  btree.h  commandParser.c  commandParser.h  globs.h  misc.c  misc.h
tests/: README.md  generate_test.py  input.0  input.1  input.10  input.100  input.1000  input.10000  input.100000  input.2  input.20  input.200  input.2000  input.20000  input.3  input.30  input.300  input.3000  input.30000  input.4  input.40  input.400  input.4000  input.40000  input.5  input.50  input.500  input.5000  input.50000  input.static.100000  output.0  output.1  output.10  output.100  output.1000  output.10000  output.100000  output.2  output.20  output.200  (+29 more)
